syntax = "proto3";

package protocol;

option csharp_namespace = "protocol.msg";
option java_package = "protocol.msg";

message SystemInfoReq{
    bool get_os_info = 1;//操作系统
    bool get_cpu_info = 2;//cpu
    bool get_mem_info = 3;//内存
    bool get_disk_info = 4;//文件系统
    bool get_net_info = 5;//网络
    bool get_jvm_info = 6;//java虚拟机
}

message SystemInfoRsp{
    OSInfo os_info = 1;
    JVMInfo jvm_info = 2;
    CPUInfo cpu_info = 3;
    MemoryInfo memory_info = 4;
    DiskInfo disk_info = 5;
    NetInfo net_info = 6;
}

message OSInfo{
    bytes os_name = 1;//操作系统的名称
    bytes os_arch = 2;//操作系统的名称
    bytes os_version = 3;//操作系统的版本
}

message CPUInfo{

}

message MemoryInfo{

}

message DiskInfo{

}

message NetInfo{

}

message JVMInfo{
    bytes java_version = 1;//Jdk版本
    bytes java_vm_specification_name = 2;//Java的虚拟机规范名称
}